# real_time_data_anomaly_detector

./: .gitignore  README.md  docker-compose.yml
consumer/: CMakeLists.txt  Dockerfile
consumer/include/: dispatcher.h  object_pool.h  worker.h
consumer/src/: dispatcher.cpp  main.cpp  object_pool.cpp  worker.cpp
producer/: CMakeLists.txt  Dockerfile
producer/include/: producer.hpp
producer/src/: main.cpp  producer.cpp
redis/: Dockerfile  redis.conf
